# zk-benchmarking

./: .gitignore  .gitmodules  Cargo.toml  README.md  all.sh  rust-toolchain
data/: 2022-12-17_020640.csv  2022-12-28_195233.csv
docker/: .env.example  .gitignore  Dockerfile  Dockerfile-barretenberg  README.md  build.sh  launch-gcp-barretenberg.sh  launch-gcp-batch.sh  launch-gcp.sh  make-service-account.sh  out.json  wrapper-barretenberg.sh  wrapper.sh
docker-aws/: Dockerfile  README.md  init-setup.sh  launch-aws-batch.sh  launch-aws.sh  results-parser.py  trust-policy.json  user-data.sh  wrapper.sh
docker/v0.11/: Dockerfile
docker/v0.11-barretenberg/: Dockerfile  benchmark_parser.sh  build.sh
miden/: .gitignore  Cargo.toml  README.md  a.csv  rust-toolchain
miden/src/: main.rs
miden/src/benches/: iter_blake3.rs  iter_rescue_prime.rs  iter_sha2.rs  merkle_path_rescue_prime.rs  merkle_rescue_prime.rs  mod.rs
risczero/: Cargo.toml  README.md  rust-toolchain
risczero-zkvm/: .gitignore  Cargo.toml  README.md  rust-toolchain
risczero-zkvm/driver/: Cargo.toml
risczero-zkvm/driver/src/benches/: big_sha2.rs
risczero-zkvm/methods/: Cargo.toml
risczero-zkvm/methods/guest/: Cargo.toml  build.rs
risczero/methods/: Cargo.toml
risczero/methods/guest/: Cargo.toml
risczero/src/: main.rs
risczero/src/benches/: big_blake3.rs  big_sha2.rs  iter_blake3.rs  iter_sha2.rs  mod.rs
rustbench/: Cargo.toml  rustfmt.toml
rustbench/src/: lib.rs
