[package]
name = "miden-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
miden = "0.3.0"
miden-core = "0.3.0"
miden-prover = "0.3.0"
miden-stdlib = "0.2.0"
rustbench = { path = "../rustbench" }
