[package]
name = "risczero-benchmark"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "methods",
]

[workspace.dependencies]
risczero-benchmark-methods = { path = "methods" }
risc0-build = { git = "https://github.com/risc0/risc0", branch = "main" }

[dependencies]
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
risczero-benchmark-methods = { workspace = true }
rustbench = { path = "../rustbench" }
serde = "1.0"
sha2 = "0.10.6"
risc0-zkp = { git = "https://github.com/risc0/risc0", branch = "main", default-features = false }
risc0-zkvm = { git = "https://github.com/risc0/risc0", branch = "main", default-features = false, features = ["prove"] }

[features]
cuda = ["risc0-zkvm/cuda"]
metal = ["risc0-zkvm/metal"]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3
