[package]
name = "risczero-benchmark-methods-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies.risc0-zkp]
version = "1.0.0-rc.2"
git = "ssh://git@github.com/risc0/risc0.git"
default-features = false

[dependencies.risc0-zkvm]
version = "1.0.0-rc.2"
git = "ssh://git@github.com/risc0/risc0.git"
default-features = false
