[package]
name = "risczero-benchmark-methods-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[build-dependencies.risc0-build]
tag = "v0.13.0"
git = "https://github.com/risc0/risc0.git"

[profile.release]
lto = true
opt-level = 3

[dependencies.risc0-zkvm]
tag = "v0.13.0"
git = "https://github.com/risc0/risc0.git"
default-features = false
